calculate bmi, bmiCategory, targetBmi
